TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2011-08-10
 * Fixed so it builds and runs on linux (but parser had issues so disabled som grammar rules whichneeds to be enabled again)
 * Added a lot of freatures and cleand up the PythonScript module
 * Started to merge som features from PythonScript back to Lua script
 
2011-08-07
 * Fixed a lot of issues with PythonScript module adding suport for alias and "raw command processing"
 * Fixed issue with loading plugins and aliases as well as duplicate plugin detection
 
2011-08-01
 * Added new module: PythonScript

2011-07-25
 * merged in all 0.3.9 changes
 * refactored where filter to be "non template" to drastically reduce compile time (as well as potentially size if I ever go dll instead of static link)
 * streamlined checkeventlog toi be same as "the other" where filters as well as dropped support of "old" syntax.

2010-02-05
 * Multiple fixes all over the place
 * Availible modules: CheckExternalScripts, CheckHelpers, FileLogger, NRPEClient, NRPEServer, Scheduler
 ! Performance data is still missing (will be for a while yet)
 
2010-01-31 MickeM
 + Added google protocol buffers
 ! Changed internal handle command logic (now uses protocol buffers)
 - Removed (temporarily) performance data (due to protocol buffer changes)

2010-01-19 MickeM
 + Rename NRPEListener to NRPEServer
 + Added NRPEServer to CMake build

2010-01-xx MickeM
 + Added Scheduling module
 
2009-10-11 MickeM
 + Added argument support to NRPE Client
   This is temporarily enabled by the same options under the NRPE section. BUT this will change int he future so be ware when using them.

2009-09-20 MickeM
 * Fixed alias in CheckWMI (now works)