@@ -378,6 +378,7 @@ SET(NSCP_DEF_PLUGIN_LIB
 	${CMAKE_THREAD_LIBS_INIT}
 	${Boost_PROGRAM_OPTIONS_LIBRARY}
 	${Boost_THREAD_LIBRARY}
+	${Boost_SYSTEM_LIBRARY}
 	${EXTRA_LIBS}
 	${PROTOBUF_LIBRARY}
 	protobuf
