@@ -589,16 +589,24 @@ namespace nscapi {
 							else
 								v->key->notify(core_, v->path, v->key_name);
 						}
+					} catch (const nscapi::nscapi_exception &e) {
+						core_->err(__FILE__, __LINE__, _T("Failed to notify ") + v->key_name + _T(": ") + e.msg_);
+					} catch (const std::exception &e) {
+						core_->err(__FILE__, __LINE__, _T("Failed to notify ") + v->key_name + _T(": ") + utf8::cvt<std::wstring>(e.what()));
 					} catch (...) {
-						core_->err(__FILE__, __LINE__, _T("Failed to register: ") + v->key_name);
+						core_->err(__FILE__, __LINE__, _T("Failed to notify: ") + v->key_name);
 					}
 				}
 				BOOST_FOREACH(path_list::value_type v, paths_) {
 					try {
 						if (v->path)
 							v->path->notify(core_, v->path_name);
+					} catch (const nscapi::nscapi_exception &e) {
+						core_->err(__FILE__, __LINE__, _T("Failed to notify ") + v->path_name + _T(": ") + e.msg_);
+					} catch (const std::exception &e) {
+						core_->err(__FILE__, __LINE__, _T("Failed to notify ") + v->path_name + _T(": ") + utf8::cvt<std::wstring>(e.what()));
 					} catch (...) {
-						core_->err(__FILE__, __LINE__, _T("Failed to register: ") + v->path_name);
+						core_->err(__FILE__, __LINE__, _T("Failed to notify: ") + v->path_name);
 					}
 				}
 
